--- a/WeeklyReport/TBWA_team/BigDataDesign_weekly(Week12).ipynb
+++ b/WeeklyReport/TBWA_team/BigDataDesign_weekly(Week12).ipynb
@@ -174,8 +174,7 @@
    "source": [
     "### Pending assignments or requests\n",
     "- pending assingments: 듀얼 데이터 프롬프트 엔지니어링\n",
-    "- requests: 다음학기 어떻게 할 것인지 교수님과 조금 더 구체적인 계획 세워보기 (우리는 논문 작성 선호)\n",
-    "\n"
+    "- requests: 다음학기 어떻게 할 것인지 교수님과 조금 더 구체적인 계획 세워보기 (우리는 논문 작성 선호)"
    ]
   }
  ],
