--- a/WeeklyReport/TBWA_team/BigDataDesign_weekly(Week12).ipynb
+++ b/WeeklyReport/TBWA_team/BigDataDesign_weekly(Week12).ipynb
@@ -275,6 +275,110 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**1.데이터 제공**   \n",
+    "<당신은 지금부터 퍼포먼스 마케터입니다.>   \n",
+    "그리고 다음은 광고 퍼포먼스 데이터입니다.   \n",
+    "| [DA-구글]     |                         |                     |                   |                   |                       |                   |                   |                   |                   |                   |\n",
+    "|---------------|-------------------------|---------------------|-------------------|-------------------|-----------------------|-------------------|-------------------|-------------------|-------------------|-------------------|\n",
+    "| 행 레이블     | CPC.                    | CPS.                | CPU.              | 신규방문CPU.      | 접수CPA.              | 심사CPA.          | 승인CPA.          | CPA.              | 예금CPA.          | 대출CPA.          |\n",
+    "| 예금          |                   111   |               144   |             212   |             427   |                 190   |           2,763   |         57,418    |        560,741    |      1,838,710    |        798,632    |\n",
+    "| 4             |                  111    |              144    |            212    |            427    |                190    |          2,763    |        57,418     |      560,741      |    1,838,710      |      798,632      |\n",
+    "|     총합계    |                   111   |               144   |             212   |             427   |                 190   |           2,763   |         57,418    |        560,741    |      1,838,710    |        798,632    |\n",
+    "|               |                         |                     |                   |                   |                       |                   |                   |                   |                   |                   |\n",
+    "| 행 레이블     | CPC.                    | CPS.                | CPU.              | 신규방문CPU.      | 접수CPA.              | 심사CPA.          | 승인CPA.          | CPA.              | 예금CPA.          | 대출CPA.          |\n",
+    "| 대출          |                     86  |                 96  |             169   |           1,135   |                 138   |           2,537   |        126,860    |        253,720    |                -  |        253,720    |\n",
+    "| 5             |                    86   |                96   |            169    |          1,135    |                138    |          2,537    |      126,860      |      253,720      |                -  |      253,720      |\n",
+    "| 예금          |                   105   |               129   |             197   |             417   |                 177   |           2,827   |         58,069    |        517,343    |      2,655,696    |        632,309    |\n",
+    "| 5             |                  105    |              129    |            197    |            417    |                177    |          2,827    |        58,069     |      517,343      |    2,655,696      |      632,309      |\n",
+    "|     총합계    |                   105   |               129   |             197   |             419   |                 177   |           2,825   |         58,269    |        513,964    |      2,672,611    |        626,393    |\n",
+    "|               |                         |                     |                   |                   |                       |                   |                   |                   |                   |                   |\n",
+    "| [DA-크리테오] |                         |                     |                   |                   |                       |                   |                   |                   |                   |                   |\n",
+    "| 행 레이블     | CPC.                    | CPS.                | CPU.              | 신규방문CPU.      | 접수CPA.              | 심사CPA.          | 승인CPA.          | CPA.              | 예금CPA.          | 대출CPA.          |\n",
+    "| 리퍼러        |                      -  |                  -  |                -  |                -  |                    -  |                -  |                -  |                -  |                -  |                -  |\n",
+    "| 4             |                      -  |                  -  |                -  |                -  |                    -  |                -  |                -  |                -  |                -  |                -  |\n",
+    "| 컨버전        |                     49  |                 83  |             102   |           3,953   |                 512   |           2,004   |         46,026    |        308,591    |        573,487    |        563,513    |\n",
+    "| 4             |                    49   |                83   |            102    |          3,953    |                512    |          2,004    |        46,026     |      308,591      |      573,487      |      563,513      |\n",
+    "| 컨시더레이션  |                     85  |               157   |             168   |             317   |               1,937   |         10,345    |        367,716    |        648,911    |    16,547,226     |        675,397    |\n",
+    "| 4             |                    85   |              157    |            168    |            317    |              1,937    |        10,345     |      367,716      |      648,911      |  16,547,226       |      675,397      |\n",
+    "|     총합계    |                     57  |                 98  |             116   |             811   |                 641   |           2,587   |         63,653    |        362,587    |        829,648    |        572,506    |\n",
+    "|               |                         |                     |                   |                   |                       |                   |                   |                   |                   |                   |\n",
+    "| 행 레이블     | CPC.                    | CPS.                | CPU.              | 신규방문CPU.      | 접수CPA.              | 심사CPA.          | 승인CPA.          | CPA.              | 예금CPA.          | 대출CPA.          |\n",
+    "| 컨버전        |                     44  |                 79  |               96  |           3,768   |                 467   |           1,855   |         40,283    |        253,526    |        562,062    |        422,543    |\n",
+    "| 5             |                    44   |                79   |              96   |          3,768    |                467    |          1,855    |        40,283     |      253,526      |      562,062      |      422,543      |\n",
+    "| 컨시더레이션  |                     81  |               161   |             172   |             347   |               1,884   |         10,188    |        398,192    |        666,363    |    16,325,890     |        694,719    |\n",
+    "| 5             |                    81   |              161    |            172    |            347    |              1,884    |        10,188     |      398,192      |      666,363      |  16,325,890       |      694,719      |\n",
+    "|     총합계    |                     53  |                 96  |             114   |             839   |                 636   |           2,611   |         59,084    |        324,755    |        853,985    |        490,587    |\n",
+    "\n",
+    "\"[]\"괄호 안의 이름은 캠페인의 이름입니다. 그리고 각 캠페인 별로 위의 표는 4월, 아래는 5월 데이터 입니다. 각 캠페인 별 4월 대비 5월의 실적을 계산해야 합니다. \n",
+    "\n",
+    "**2. C로 시작하는 단어의 리스트 제대로 지정**  \n",
+    "\n",
+    "각 지표의 의미는 다음과 같습니다.\n",
+    "1. CPC - Cost per Click\n",
+    "2. CPS - Cost per Sale\n",
+    "3. 접수 CPA - 접수 Cost per Action\n",
+    "4. CPU - Cost per User\n",
+    "5. 신규 방문 CPU - 신규방문 Cost per User\n",
+    "6. 심사 CPA - 심사 Cost per Action\n",
+    "7. 승인 CPA - 승인 Cost per Action\n",
+    "8. CPA - Cost per Action\n",
+    "9. 예금 CPA - 예금 Cost per Action\n",
+    "10. 대출 CPA - 대출 Cost per Action\n",
+    "\n",
+    "**3. 증감율 계산 예시 식 제공**  \n",
+    "    \n",
+    "증감율 계산 식은 아래와 같습니다.\n",
+    "( ( B - A ) / A ) x 100  \n",
+    "\n",
+    "이때, A는 4월 데이터 값이고 B는 5월 데이터 값입니다. \n",
+    "\n",
+    "예를 들어, [DA-카카오] 캠페인의 4월 대비 5월 성과를 계산하기 위해서는 먼저 행 레이블에서 같은 카테고리끼리 비교해야 합니다. 4월 데이터에는 행 레이블에 대출 카테고리가 없기 때문에 예금 카테고리를 비교해 보겠습니다.  \n",
+    "DA-카카오의 4월 CPC는 101이고 5월 CPC는 103이기 때문에, ((103-101)/101)*100은 1.98입니다.\n",
+    "\n",
+    "| [DA-카카오] |                        |                    |                  |                  |                      |                  |                    |                 |                      |                 |\n",
+    "|-------------|------------------------|--------------------|------------------|------------------|----------------------|------------------|--------------------|-----------------|----------------------|-----------------|\n",
+    "| 행 레이블   | CPC.                   | CPS.               | CPU.             | 신규방문CPU.     | 접수CPA.             | 심사CPA.         | 승인CPA.           | CPA.            | 예금CPA.             | 대출CPA.        |\n",
+    "| 예금        |                   101  |               191  |             213  |             302  |                 909  |           4,481  |        103,993     |        485,302  |        1,663,894     |        685,133  |\n",
+    "| 4           |                   101  |               191  |             213  |             302  |                909   |          4,481   |       103,993      |       485,302   |      1,663,894       |       685,133   |\n",
+    "|    총합계   |                   101  |               191  |             213  |             302  |                 909  |           4,481  |        103,993     |        485,302  |        1,663,894     |        685,133  |\n",
+    "|             |                        |                    |                  |                  |                      |                  |                    |                 |                      |                 |\n",
+    "| 행 레이블   | CPC.                   | CPS.               | CPU.             | 신규방문CPU.     | 접수CPA.             | 심사CPA.         | 승인CPA.           | CPA.            | 예금CPA.             | 대출CPA.        |\n",
+    "| 대출        |                   109  |               296  |             303  |             366  |             71,986   |        107,980   |                 -  |        107,980  |                   -  |        107,980  |\n",
+    "| 5           |                   109  |               296  |             303  |             366  |            71,986    |       107,980    |                 -  |       107,980   |                   -  |       107,980   |\n",
+    "| 예금        |                   103  |               184  |             207  |             321  |                 685  |           3,418  |          76,394    |        295,254  |        1,213,821     |        390,157  |\n",
+    "| 5           |                   103  |               184  |             207  |             321  |                685   |          3,418   |        76,394      |       295,254   |      1,213,821       |       390,157   |\n",
+    "|    총합계   |                   103  |               185  |             208  |             321  |                 699  |           3,484  |          77,905    |        285,650  |        1,237,817     |        371,345  |\n",
+    "\n",
+    "**4. 지표에 대한 긍/부정 정리 및 상관관계 정리**  \n",
+    "\n",
+    "위 데이터의 변화에서 긍정적인 변화는 다음과 같습니다.  \n",
+    "\n",
+    "긍정\n",
+    "1. 위의 핵심 10가지 지표는 감소할 수록 긍정 (개선)\n",
+    "2. 다소 높은 CPC에 비해 CPU 200원대 중반, 심사 CPA 1600원대는 우수한 효율\n",
+    "3. 심사수 증가는 심사 CPA 개선에 영향\n",
+    "4. CPC 감소는 CPU 개선에 영향\n",
+    "5. 예산 높을 수록 긍정\n",
+    "6. 최대입찰가 감액은 CPU, 신규 방문 CPU 개선에 영향\n",
+    "7. 심사 CPA 2000원대는 효율이 좋은 편\n",
+    "8. 유입수, 검색수 증가는 심사 CPA 개선 영향\n",
+    "\n",
+    "부정\n",
+    "1. 3천원대 심사 CPA는 다소 높은 심사 CPA\n",
+    "2. 광고비 증가는 CPU 증가에 영향 (부정적인 지표), 심사 CPA증가에 영향\n",
+    "3. 클릭률 감소는 CPU 증가에 영향\n",
+    "4. 방문자 대비 신규 방문자수 비중 감소는 신규방문 CPU 증가\n",
+    "5. 유입단가 증가는 전체 CPU 증가에 영향\n",
+    "6. 노출/ 클릭 감소는 위의 핵심 지표에 부정적인 영향\n",
+    "7. 클릭률 감소는 CPU, 신규방문 CPU 증가에 영향 (부정적인 지표)\n",
+    "\n",
+    "**5. 위 정보들을 모두 활용하여 맨 처음 주었던 데이터에서 각 캠페인별 각 지표에 어떠한 증감율이 있었고, 이것이 긍정적인, 또는 부정적인 변화인지 각 지표별로 내용을 정리해주세요.**  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
